--- a/style.css
+++ b/style.css
@@ -3,3 +3,59 @@ body{
     font-family: 'Amatic SC', cursive;
     font-family: 'Roboto', sans-serif;
 }
+section{
+    margin-bottom: 50px;
+}
+
+.background-image{
+    background-image: url(images/bg.png);
+    background-size: cover;
+    height: 100vh;
+    background-repeat: no-repeat;
+}
+
+.linear-effect{
+    background-image: linear-gradient(90deg, #1A1A1A -0.7%, rgba(26, 26, 26, 0) 100%);
+    background-size: cover;
+    height: 100vh;
+}
+
+.highlighted-text{
+    text-align: left;
+    padding: 200px;
+}
+
+.highlighted-text h1{
+    font-size: 80px;
+    color:#FFFFFF;
+}
+.highlighted-text p{
+    color: #FFFFFF;
+    margin-bottom: 50px;
+    
+}
+
+.donate-button{
+    padding: 16px 12px;
+    background: #EF233C;
+    border-radius: 5px;
+    text-decoration: none;
+    color: #FFFFFF;
+}
+
+.second-banner{
+    display: flex;
+    margin: 100px 300px;
+}
+
+.flexible-content{
+    width: 50%;
+}
+.flexible-content img {
+    width: 70%;
+}
+.flexible-content p{
+    padding-right: 40px;
+    text-align: left;
+    margin-bottom: 50px;
+}
